--- a/DayOpenDoors/DayOpenDoors/MapPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/MapPage.xaml
@@ -1,11 +1,145 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DayOpenDoors.MapPage"
-             Title="План здания">
-    <ContentPage.Content>
-        <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand">
-            <Button x:Name="FloorButton" Text="Выберите этаж" Clicked="ShowFloor"/>
-        </StackLayout>
-    </ContentPage.Content>
+             xmlns:local="clr-namespace:DayOpenDoors"
+             x:Class="DayOpenDoors.MapPage">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="simpleButton" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="#eee"/>
+                <Setter Property="TextColor" Value="Black" />
+                <Setter Property="BorderRadius" Value="0"/>
+                <Setter Property="FontSize" Value="10" />
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    <Grid x:Name="MainGrid">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="9*" />
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Label x:Name="FloorLabel" Text="Этаж" FontSize="Large" HorizontalOptions="Center" Grid.ColumnSpan="6" Grid.Column="0" Grid.Row="0"/>
+        <Button Style="{StaticResource simpleButton}" Text="1" Grid.Row="1" Grid.Column="0" Clicked="FirstButton_Clicked"/>
+        <Button Style="{StaticResource simpleButton}" Text="2" Grid.Row="1" Grid.Column="1" Clicked="SecondButton_Clicked"/>
+        <Button Style="{StaticResource simpleButton}" Text="3" Grid.Row="1" Grid.Column="2" Clicked="ThirdButton_Clicked"/>
+        <Button Style="{StaticResource simpleButton}" Text="4" Grid.Row="1" Grid.Column="3" Clicked="FourthButton_Clicked"/>
+        <Button Style="{StaticResource simpleButton}" Text="5" Grid.Row="1" Grid.Column="4" Clicked="FifthButton_Clicked"/>
+        <Button Style="{StaticResource simpleButton}" Text="6" Grid.Row="1" Grid.Column="5" Clicked="SixthButton_Clicked"/>
+
+        <Grid x:Name="FlatGrid" ColumnSpacing="0" RowSpacing="0" WidthRequest="2" Padding="10, 0, 10, 0">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2"/>
+                <RowDefinition Height="20" />
+                <RowDefinition Height="2"/>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="2"/>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="2"/>
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2"/>
+                <ColumnDefinition Width="5*" />
+                <ColumnDefinition Width="2"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="2"/>
+                <ColumnDefinition Width="5*" />
+                <ColumnDefinition Width="2"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="2"/>
+                <ColumnDefinition Width="5*" />
+                <ColumnDefinition Width="2"/>
+            </Grid.ColumnDefinitions>
+
+            <Label x:Name="InfoLabel"  
+                   Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="11"
+                   FontSize="Medium"
+                   VerticalOptions="CenterAndExpand"
+                   HorizontalOptions="CenterAndExpand"/>
+
+            <StackLayout Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="11">
+
+                <Label x:Name="EventLabel" IsVisible="False" Text="Название события" 
+                       HorizontalOptions="CenterAndExpand"/>
+
+                <Button x:Name="EventButton" IsVisible="False" Text="Жмакнуть, чтобы перейти" 
+                        Clicked="EventButton_Clicked" HorizontalOptions="CenterAndExpand"/>
+
+            </StackLayout>
+
+            <Grid x:Name="LeftGrid" ColumnSpacing="0" RowSpacing="0">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="4*" />
+                    <RowDefinition Height="3*" />
+                    <RowDefinition Height="4*" />
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+            </Grid>
+
+            <Grid x:Name="MiddleGrid" ColumnSpacing="0" RowSpacing="0">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="4*" />
+                    <RowDefinition Height="3*" />
+                    <RowDefinition Height="4*" />
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+            </Grid>
+
+            <Grid x:Name="RightGrid" ColumnSpacing="0" RowSpacing="0">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="4*" />
+                    <RowDefinition Height="3*" />
+                    <RowDefinition Height="4*" />
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+            </Grid>
+
+            <Image x:Name="im1" Source="elevator.jpg" Grid.Row="3" Grid.Column="3" VerticalOptions="FillAndExpand"/>
+            <Image x:Name="im2" Source="elevator.jpg" Grid.Row="3" Grid.Column="7" VerticalOptions="FillAndExpand"/>
+        </Grid>
+    </Grid>
 </ContentPage>
