Create feature to hide toolbar items when it needs

--- a/DayOpenDoors/DayOpenDoors/ChatPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/ChatPage.xaml
@@ -4,7 +4,7 @@
              x:Class="DayOpenDoors.ChatPage"
              Title="Чат">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout x:Name="ChatLayout">
             <ListView x:Name="MessagesView"
                       HasUnevenRows="True"
                   ItemsSource="{Binding Messages}"
