--- a/DayOpenDoors/DayOpenDoors/MainPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/MainPage.xaml
@@ -22,6 +22,7 @@
                     <Button Text="План мероприятия" Clicked="Plan_Click"/>
                     <Button Text="Чат" Clicked="Chat_Click"/>
                     <Button Text="Столовая" Clicked="DR_Click"/>
+                    <Button Text="Сменить аккаунт" Clicked="Exit"/>
                     <Button Text="*" Clicked="Some_Click"/>
                 </StackLayout>
             </ContentPage.Content>
