--- a/DayOpenDoors/DayOpenDoors/MapPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/MapPage.xaml
@@ -13,12 +13,12 @@
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
-    <Grid x:Name="MainGrid">
+    <Grid x:Name="MainGrid" Padding="10, 0, 10, 0">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="2*" />
-            <RowDefinition Height="2*" />
-            <RowDefinition Height="9*" />
+            <RowDefinition Height="3*" />
+            <RowDefinition Height="4*" />
+            <RowDefinition Height="18*" />
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -38,11 +38,11 @@
         <Button Style="{StaticResource simpleButton}" Text="5" Grid.Row="1" Grid.Column="4" Clicked="FifthButton_Clicked"/>
         <Button Style="{StaticResource simpleButton}" Text="6" Grid.Row="1" Grid.Column="5" Clicked="SixthButton_Clicked"/>
 
-        <Grid x:Name="FlatGrid" ColumnSpacing="0" RowSpacing="0" WidthRequest="2" Padding="10, 0, 10, 0">
+        <Grid x:Name="FlatGrid" ColumnSpacing="0" RowSpacing="0" WidthRequest="2">
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="2"/>
-                <RowDefinition Height="20" />
+                <RowDefinition Height="0" />
                 <RowDefinition Height="2"/>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="2"/>
