new bag fixs....

--- a/DayOpenDoors/DayOpenDoors/AskOrCreatePage.xaml
+++ b/DayOpenDoors/DayOpenDoors/AskOrCreatePage.xaml
@@ -6,7 +6,8 @@
         <StackLayout VerticalOptions="Center" HorizontalOptions="FillAndExpand">
             <Image Source="Trench.png" HeightRequest="200" WidthRequest="200"/>
             <Entry x:Name="NameEntry" HorizontalOptions="FillAndExpand" PlaceholderColor="Blue" HorizontalTextAlignment="Center"/>
-            <Entry x:Name="PasswordEntry" IsPassword="True" HorizontalOptions="FillAndExpand" PlaceholderColor="Blue" HorizontalTextAlignment="Center"/>
+            <Entry x:Name="PasswordEntry" IsPassword="True" TextChanged="CheckLength"
+                   HorizontalOptions="FillAndExpand" PlaceholderColor="Blue" HorizontalTextAlignment="Center"/>
             <Button x:Name="StatusButton" Text="Выберите статус" FontSize="Small" Clicked="ChooseStatus" BackgroundColor="White" TextColor="Blue"
                     BorderColor="Blue" BorderRadius="10" BorderWidth="2" HorizontalOptions="FillAndExpand" />
             <Button x:Name="AskOrCreateButton" BackgroundColor="White" TextColor="Blue"
