--- a/DayOpenDoors/DayOpenDoors/MainPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/MainPage.xaml
@@ -19,10 +19,17 @@
         <ContentPage Title="Добро пожаловать!">
             <ContentPage.Content>
                 <StackLayout Spacing="5" BackgroundColor="Default">
+                    <StackLayout Orientation="Horizontal" BackgroundColor="White">
+                        <Image Source="CoolTrench.jpg" WidthRequest="50" HeightRequest="50" HorizontalOptions="Start"/>
+                        <StackLayout VerticalOptions="CenterAndExpand" Spacing="0">
+                            <Label TextColor="Blue" x:Name="NameLabel" FontSize="Medium" />
+                            <Label TextColor="Orange" x:Name="StatusLabel" FontSize="Small"/>
+                        </StackLayout>
+                        <Button Text="Сменить аккаунт" Clicked="Exit" HorizontalOptions="FillAndExpand" BorderColor="White" VerticalOptions="EndAndExpand"/>
+                    </StackLayout>
                     <Button Text="План мероприятия" Clicked="Plan_Click"/>
                     <Button Text="Чат" Clicked="Chat_Click"/>
                     <Button Text="Столовая" Clicked="DR_Click"/>
-                    <Button Text="Сменить аккаунт" Clicked="Exit"/>
                     <Button Text="*" Clicked="Some_Click"/>
                 </StackLayout>
             </ContentPage.Content>
