--- a/DayOpenDoors/DayOpenDoors/InfoPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/InfoPage.xaml
@@ -13,18 +13,20 @@
                     <DataTemplate>
                         <ViewCell>
                             <ViewCell.View>
-                                <Frame CornerRadius="10" Padding="0" Margin="0">
-                                    <StackLayout Orientation="Horizontal" Padding="0">
-                                        <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="Start">
-                                            <Label Text="{Binding StartTime}" MaxLines="1"/>
-                                            <Label Text="{Binding EndTime}" VerticalOptions="EndAndExpand" MaxLines="1"/>
+                                <Frame CornerRadius="10" Padding="0" Margin="0,0,0,10">
+                                    <StackLayout Orientation="Horizontal" Margin="5" HorizontalOptions="FillAndExpand">
+                                        <StackLayout HorizontalOptions="Start" MinimumWidthRequest="40">
+                                            <Label Text="{Binding StartTime}" FontFamily="TimesNewRoman"/>
+                                            <Label Text="{Binding EndTime}" VerticalOptions="EndAndExpand"/>
                                         </StackLayout>
                                         <BoxView BackgroundColor="{Binding EventColor}" WidthRequest="5" CornerRadius="10"/>
-                                        <StackLayout Padding="0">
-                                            <Label Text="{Binding Name}" LineBreakMode="WordWrap" TextColor="Blue"/>
-                                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                        <StackLayout HorizontalOptions="FillAndExpand">
+                                            <Label Text="{Binding Name}" TextColor="Blue" MaxLines="3"/>
+                                            <Label Text="{Binding Info}" LineBreakMode="WordWrap"/>
+                                            <Label Text="{Binding SpeakerName}" HorizontalOptions="End"/>
+                                            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand">
                                                 <Label Text="{Binding Type}" TextColor="Orange" HorizontalOptions="StartAndExpand"/>
-                                                <Label Text="{Binding Status}" TextColor="{Binding EventColor}" VerticalOptions="EndAndExpand"  HorizontalOptions="EndAndExpand"/>
+                                                <Label Text="{Binding Status}" TextColor="{Binding EventColor}"  HorizontalOptions="End"/>
                                             </StackLayout>
                                         </StackLayout>
                                     </StackLayout>
