--- a/DayOpenDoors/DayOpenDoors/MainPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/MainPage.xaml
@@ -29,8 +29,7 @@
                     </StackLayout>
                     <Button Text="План мероприятия" Clicked="Plan_Click"/>
                     <Button Text="Чат" Clicked="Chat_Click"/>
-                    <Button Text="Столовая" Clicked="DR_Click"/>
-                    <Button Text="*" Clicked="Some_Click"/>
+                    <Button Text="Как добраться" Clicked="Way_Click"/>
                 </StackLayout>
             </ContentPage.Content>
         </ContentPage>
