--- a/DayOpenDoors/DayOpenDoors/InfoPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/InfoPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DayOpenDoors.InfoPage"
-              Title="Добро пожаловать!">
+             Title="Добро пожаловать!"
+             BackgroundImage = "FCSTree.png">
     <ContentPage.Content>
         <StackLayout x:Name="InfoLayout" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
             <ListView x:Name="InfoList"
