--- a/DayOpenDoors/DayOpenDoors/PlanPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/PlanPage.xaml
@@ -4,8 +4,8 @@
              x:Class="DayOpenDoors.PlanPage"
              Title="Мероприятия">
     <ContentPage.Content>
-        <StackLayout>
-            <Button x:Name="TypeButton" Clicked="ShowEvents" 
+        <StackLayout Padding="0,10,0,0">
+            <Button x:Name="TypeButton" Clicked="ShowEvents"
                     Text="Выберите тип мероприятия" BackgroundColor="White" TextColor="Blue"
                     BorderRadius="10"/>
             <ListView x:Name="EventListView"
