--- a/DayOpenDoors/DayOpenDoors/MainPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/MainPage.xaml
@@ -12,6 +12,7 @@
                 <Setter Property="BorderRadius" Value="10"/>
                 <Setter Property="BorderColor" Value="Blue"/>
                 <Setter Property="BorderWidth" Value="2"/>
+                <Setter Property="Margin" Value="5"/>
             </Style>
         </ResourceDictionary>
     </MasterDetailPage.Resources>
