--- a/DayOpenDoors/DayOpenDoors/CheckPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/CheckPage.xaml
@@ -6,10 +6,10 @@
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="Button">
-                <Setter Property="BackgroundColor" Value="White"/>
-                <Setter Property="TextColor" Value="Blue"/>
-                <Setter Property="Padding" Value="0"/>
-                <Setter Property="BorderRadius" Value="10"/>
+                <Setter Property="BackgroundColor" Value="Blue"/>
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="Padding" Value="5"/>
+                <Setter Property="BorderRadius" Value="0"/>
                 <Setter Property="BorderColor" Value="Blue"/>
                 <Setter Property="BorderWidth" Value="2"/>
             </Style>
