--- a/DayOpenDoors/DayOpenDoors/MainPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/MainPage.xaml
@@ -6,13 +6,12 @@
     <MasterDetailPage.Resources>
         <ResourceDictionary>
             <Style TargetType="Button">
-                <Setter Property="BackgroundColor" Value="White"/>
-                <Setter Property="TextColor" Value="Blue"/>
-                <Setter Property="Padding" Value="0"/>
-                <Setter Property="BorderRadius" Value="10"/>
+                <Setter Property="BackgroundColor" Value="Blue"/>
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="BorderRadius" Value="0"/>
                 <Setter Property="BorderColor" Value="Blue"/>
                 <Setter Property="BorderWidth" Value="2"/>
-                <Setter Property="Margin" Value="5"/>
+                <Setter Property="Margin" Value="0,5,0,5"/>
             </Style>
         </ResourceDictionary>
     </MasterDetailPage.Resources>
@@ -26,7 +25,8 @@
                             <Label TextColor="Blue" x:Name="NameLabel" FontSize="Medium" />
                             <Label TextColor="Orange" x:Name="StatusLabel" FontSize="Small"/>
                         </StackLayout>
-                        <Button Text="Сменить аккаунт" Clicked="Exit" HorizontalOptions="FillAndExpand" BorderColor="White" VerticalOptions="EndAndExpand"/>
+                        <Button Text="Сменить аккаунт" Clicked="Exit" HorizontalOptions="FillAndExpand" TextColor="Blue" BackgroundColor="White"
+                                BorderColor="White" VerticalOptions="EndAndExpand"/>
                     </StackLayout>
                     <Button Text="План мероприятия" Clicked="Plan_Click"/>
                     <Button Text="Чат" Clicked="Chat_Click"/>
