--- a/DayOpenDoors/DayOpenDoors/PlanPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/PlanPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DayOpenDoors.PlanPage"
-             Title="Мероприятия">
+             Title="Мероприятия"
+             BackgroundImage="PlanBackground.jpg">
     <ContentPage.Content>
         <StackLayout Padding="0,10,0,0">
             <ListView x:Name="EventListView"
